Fixed AOS Bug on Mobile

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -47,6 +47,10 @@ $dark: rgb(27, 27, 27);
     }
 }
 
+.overflowXHidden {
+    overflow-x: hidden;
+}
+
 // Media Queries
 @include media-breakpoint-up(md) {
     #showcase {
@@ -68,5 +72,9 @@ $dark: rgb(27, 27, 27);
         left: 0;
         background: $light;
         transform: skewY(-0.7deg);
+    }
+
+    .overflowXHidden {
+        overflow-x: visible;
     }
 }
